--- a/scelta.html
+++ b/scelta.html
@@ -1,79 +1,134 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>consigli</title>
+        <link rel="stylesheet" type="text/css" href="style_index.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    </head>
+    <body class="box">
+        <!-- VISIBILE SOLO SU SCHERMI XXL QUINDI ≥1400px -->
+        <div class="d-none d-xxl-block">
+            <div class="container-fluid"> 
+                <div class="z-n1 position-absolute fixed-top"><img src="immagini/earth.png" class="earth img-fluid"></div>
+                    <nav class="navbar fixed-top">
+                        <a href="index.html" class="collegamento"> <img src="immagini/icons8-code-50-(3).png" class="ms-5 mt-4" /> </a>
+                        <div class="menu-options">
+                            <span class="word-offset"><a href="prima_sia.html" class="collegamento">1^Asia</a></span>
+                            <span class="word-offset"><a href="scelta.html" class="collegamento">Scelta Scolastica</a></span>
+                        </div>
+                    </nav>
+                    <div class="row" style="margin-top:200px; margin-bottom: 30px;">
+                        <div class="col-3"></div>
+                        <div class="col-6 boxtesto" style="margin-top:70px;  margin-bottom: 30px;">
+                            <h3 class="testo">
+                                Hai bisogno di una mano a decidere che scuola superiore fare?<br>leggi i consigli raccolti
+                                forniti dai ragazzi delle superiori che <br>hanno già fatto questa scelta
+                            </h3>
+                            <div class="row">
+                                <div class="col-12">
+                                    <h5 class="testo">
+                                    Hai bisogno di una mano a decidere che scuola superiore fare?<br>leggi i consigli raccolti
+                                    forniti dai ragazzi delle superiori che <br>i ragazzi consigliano di scegliere la scuola in base a 3 principali fattori:<br>-la distanza da casa<br>-le
+                                    proprie passioni e desideri
+                                    <br>-ciò che si vuole fare una volta finite le scuole superiori (lavoro/università)<br><br>Se i tuoi interessi si
+                                    orientano verso
+                                    l'informatica, l'economia aziendale, la matematica, molto probabilmente il corso SIA potrebbe rientrare
+                                    nelle possibili scelte
+                                    che potresti effettuare, però attenzione, non scegliere questo corso se pensi che sia facile perchè devi studiare
+                                    una lingua in meno
+                                    o perchè si studia più informatica, perchè non è affatto così, se ti piace l'informatica ma potrebbe annoiarti col
+                                    tempo e pensavi di frequentare
+                                    questo corso, ti consiglio di rivalutare la tua scelta per evitare che andando avanti con il tuo percorso di studi
+                                    l'atmosfera possa diventare noiosa
+                                    e pesante.<br>Hai paura che potresti pentirti di questa scelta? Non preoccuparti di ciò, perchè hai il tempo di
+                                    poter cambiare scuola o indirizzo e sperimentare
+                                    altre realtà, dunque buttati!<br><br>Altre considerazioni importanti da valutare nel momento della scelta della
+                                    scuola sono appunto i tuoi piani futuri,
+                                    vuoi subito lavorare una volta finita la scuola? vuoi proseguire con l'università? <br> se non vuoi essere
+                                    "obbligato/a" a proseguire gli studi
+                                    ti consiglio di evitare di andare a fare un liceo, in quanto il diploma che ti fornisce spesso implica la
+                                    frequenza dell'università, mentre opterei per
+                                    un istituto tecnico per poter avere "campo libero" una volta terminata la scuola, ad esempio, se ti diplomassi in
+                                    SiStemi Informativi Aziendali,
+                                    potresti trovare subito un lavoro orientato in qualsiasi ambito, quindi non per forza dovrai lavorare con
+                                    l'informatica o l'economia, però hai la fortuna
+                                    di avere le competenze necessarie per farlo nel caso volessi lavorare in quegli ambiti in futuro. Per quanto
+                                    riguarda l'università, puoi muoverti liberamente
+                                    anche lì, in quanto i corsi che potrai frequentare sono praticamente tutti, dall'economia e gestione aziendale,
+                                    giurisprudenza, informatica alla psicologia, storia,
+                                    lettere, dunque, una volta finita la scuola potresti adirittura avere l'imbarazzo della
+                                    scelta.<br>IMPORTANTE!<br>Quando devi scegliere la scuola superiore che vorresti frequentare
+                                    non devi seguire i tuoi amici, perchè non è detto che se i tuoi amici o un tuo amico si trova bene in una scuola,
+                                    potresti trovarti bene pure te, infatti dovresti
+                                    seguire le tue passioni e i tuoi interessi, nel caso non ti fosse permesso, prova a pensare ad una scuola che
+                                    potrebbe fornirti un futuro più sicuro rispetto alle altre e continua a
+                                    coltivare le tue passioni al di fuori della scuola, in quanto anche esse sono importanti.<br>
+                                    Se sei alla ricerca di una scuola dove non si studia, non si fa niente o si fa pochissimo, sappi che non c'è, in
+                                    tutte le scuole è richiesto un minimo studio e un minimo impegno,
+                                    in quanto il loro scopo è quello di insegnare, dunque se vuoi scegliere una scuola dove "si studia poco" o "si fa
+                                    poco", prova a chiederti quale sarebbe una scuola dove potresti ottenere buoni risultati
+                                    ma senza doverti sforzare troppo nello studio.<br><br>
+                                    </h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+            </div>
+        </div>
 
-<head>
-  <title>SIA consigli</title>
-  <link rel="stylesheet" type="text/css" href="style_scelta.css">
-</head>
-
-<body>
-  <nav>
-    <a href="index.html"> <img src="immagini/icons8-code-50-(3).png"> </a>
-    <div class="menu-options">
-      <span class="word-offset"><a href="prima_sia.html">1^Asia</a></span>
-      <span class="word-offset"><a href="scelta.html">Scelta Scolastica</a></span>
-      <span class="word-offset"><a href="#">About</a></span>
-    </div>
-  </nav>
-  <br><br><br><br><br>
-
-  <!--
-    tutto ciò che è stato scritto è raccolto da quanto emerso dal sondaggio fatto nella classe quarta.
-    sarebbe bello aggiungere anche i punti di vista delle altre classi (prima,terza e quinta)
-  -->
-  <div class="centered">
-    <div class="contenuto">
-      <h1 class="titolo">Hai bisogno di una mano a decidere che scuola superiore fare?<br>leggi i consigli raccolti
-        forniti dai ragazzi delle superiori che <br>hanno già fatto questa scelta</h1>
-      <h3>
-        i ragazzi consigliano di scegliere la scuola in base a 3 principali fattori:<br>-la distanza da casa<br>-le
-        proprie passioni e desideri
-        <br>-ciò che si vuole fare una volta finite le scuole superiori (lavoro/università)<br><br>Se i tuoi interessi si
-        orientano verso
-        l'informatica, l'economia aziendale, la matematica, molto probabilmente il corso SIA potrebbe rientrare
-        nelle possibili scelte
-        che potresti effettuare, però attenzione, non scegliere questo corso se pensi che sia facile perchè devi studiare
-        una lingua in meno
-        o perchè si studia più informatica, perchè non è affatto così, se ti piace l'informatica ma potrebbe annoiarti col
-        tempo e pensavi di frequentare
-        questo corso, ti consiglio di rivalutare la tua scelta per evitare che andando avanti con il tuo percorso di studi
-        l'atmosfera possa diventare noiosa
-        e pesante.<br>Hai paura che potresti pentirti di questa scelta? Non preoccuparti di ciò, perchè hai il tempo di
-        poter cambiare scuola o indirizzo e sperimentare
-        altre realtà, dunque buttati!<br><br>Altre considerazioni importanti da valutare nel momento della scelta della
-        scuola sono appunto i tuoi piani futuri,
-        vuoi subito lavorare una volta finita la scuola? vuoi proseguire con l'università? <br> se non vuoi essere
-        "obbligato/a" a proseguire gli studi
-        ti consiglio di evitare di andare a fare un liceo, in quanto il diploma che ti fornisce spesso implica la
-        frequenza dell'università, mentre opterei per
-        un istituto tecnico per poter avere "campo libero" una volta terminata la scuola, ad esempio, se ti diplomassi in
-        SiStemi Informativi Aziendali,
-        potresti trovare subito un lavoro orientato in qualsiasi ambito, quindi non per forza dovrai lavorare con
-        l'informatica o l'economia, però hai la fortuna
-        di avere le competenze necessarie per farlo nel caso volessi lavorare in quegli ambiti in futuro. Per quanto
-        riguarda l'università, puoi muoverti liberamente
-        anche lì, in quanto i corsi che potrai frequentare sono praticamente tutti, dall'economia e gestione aziendale,
-        giurisprudenza, informatica alla psicologia, storia,
-        lettere, dunque, una volta finita la scuola potresti adirittura avere l'imbarazzo della
-        scelta.<br>IMPORTANTE!<br>Quando devi scegliere la scuola superiore che vorresti frequentare
-        non devi seguire i tuoi amici, perchè non è detto che se i tuoi amici o un tuo amico si trova bene in una scuola,
-        potresti trovarti bene pure te, infatti dovresti
-        seguire le tue passioni e i tuoi interessi, nel caso non ti fosse permesso, prova a pensare ad una scuola che
-        potrebbe fornirti un futuro più sicuro rispetto alle altre e continua a
-        coltivare le tue passioni al di fuori della scuola, in quanto anche esse sono importanti.<br>
-        Se sei alla ricerca di una scuola dove non si studia, non si fa niente o si fa pochissimo, sappi che non c'è, in
-        tutte le scuole è richiesto un minimo studio e un minimo impegno,
-        in quanto il loro scopo è quello di insegnare, dunque se vuoi scegliere una scuola dove "si studia poco" o "si fa
-        poco", prova a chiederti quale sarebbe una scuola dove potresti ottenere buoni risultati
-        ma senza doverti sforzare troppo nello studio.<br><br>
-        Quando scegli una scuola devi anche mettere in conto il tuo metodo di studio, se si tratta di una metodologia che
-        segue il ragionamento logico, dove riesci ad organizzare le idee
-        in modo efficiente, il SIA potrebbe essere adatto a te, potresti viverlo in maniera più leggera in quanto sarai
-        più agevolato nello studio, sia dell'informatica, sia della matematica e dell'economia aziendale.
-        <br> grazie per l'attenzione, spero di esserti stata utile! :)
-      </h3>
-    </div>
-  </div>
-</body>
-
+        <!-- ANY OTHER SCREEN-->
+        <div class="d-xxl-none h-100 boxsmallsc">
+            <div class="container-fluid h-100">
+                <div class="d-flex align-items-start flex-column h-100" style="color:#FFF">
+                    <div>
+                        <div class="row mt-5">
+                            <ul class="nav nav-underline justify-content-center mt-3">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="index.html" style="color:white">Home</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="prima_sia.html" style="color:white">1^Asia</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page"" href="scelta.html" style="color:white">Scelta</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="row" style="margin-top: 50px;">
+                            <div class="col-2"></div>
+                            <div class="col-8 boxtestosmallsc">
+                                <p class="testosmallsc">
+                                    Hai bisogno di una mano a decidere che scuola superiore fare?<br>leggi i consigli raccolti
+                                    forniti dai ragazzi delle superiori che <br>i ragazzi consigliano di scegliere la scuola in base a 3 principali fattori:<br>-la distanza da casa<br>-le
+                                    proprie passioni e desideri
+                                    <br>-ciò che si vuole fare una volta finite le scuole superiori (lavoro/università)<br><br>Se i tuoi interessi si
+                                    orientano verso
+                                    l'informatica, l'economia aziendale, la matematica, molto probabilmente il corso SIA potrebbe rientrare
+                                    nelle possibili scelte
+                                    che potresti effettuare, però attenzione, non scegliere questo corso se pensi che sia facile perchè devi studiare
+                                    una lingua in meno
+                                    o perchè si studia più informatica, perchè non è affatto così, se ti piace l'informatica ma potrebbe annoiarti col
+                                    tempo e pensavi di frequentare
+                                    questo corso, ti consiglio di rivalutare la tua scelta per evitare che andando avanti con il tuo percorso di studi
+                                    l'atmosfera possa diventare noiosa
+                                    e pesante.<br>Hai paura che potresti pentirti di questa scelta? Non preoccuparti di ciò, perchè hai il tempo di
+                                    poter cambiare scuola o indirizzo e sperimentare
+                                    altre realtà, dunque buttati!<br><br>Altre considerazioni importanti da valutare nel momento della scelta della
+                                    scuola sono appunto i tuoi piani futuri.
+                                    anche lì isprudenza, informatica alla psicologia, storia,
+                                    lettere, dunque, una volta finita la scuola potresti adirittura avere l'imbarazzo della
+                                    scelta.<br>IMPORTANTE!<br>Quando devi scegliere la scuola superiore che vorresti frequentare
+                                    non devi seguire i tuoi amici, perchè non è detto che se i tuoi amici o un tuo amico si trova bene in una scuola,
+                                    potresti trovarti bene pure te, infatti dovresti
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="mt-auto"><img src="immagini/palazzi2.png" class="img-fluid"></div>
+                </div>
+            </div>       
+        </div>
+    </body>
 </html>
